remove collapse slider & add fixed slider

--- a/src/app/pages/product/page/api-documentation/api-documentation.component.scss
+++ b/src/app/pages/product/page/api-documentation/api-documentation.component.scss
@@ -8,3 +8,8 @@ nz-content {
   min-height: 360px;
   background: #fff;
 }
+
+nz-sider {
+  height: 100%;
+  position: fixed;
+}
